front/mypang/argocd-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: sk067-mypang-front
  namespace: skala-practice
spec:
  ingressClassName: public-nginx
  rules:
  - host: mypang
    http:
      paths:
      - backend:
          service:
            name: sk067-mypang-ui
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - mypang
    secretName: sk067-mypang-front-secret
